# electronic-retail

./: pyproject.toml
electronic_retail/: manage.py
electronic_retail/electronic_retail/: asgi.py  settings.py  urls.py  wsgi.py
electronic_retail/suppliers/: choices.py  models.py
